test/should_fail/inh_model_008.gm
edge class A;
node class B extends A;
